added new more general tasks endpoint
